# auth-service

./: .dev.env  .env  Cargo.toml  Containerfile.dev  README.md  compose.dev.yaml
.devcontainer/: devcontainer.json
.devcontainer/default/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: docker-manual-build.yml  docker-publish.yml  docker-test-builds.yml
container/: Containerfile  Containerfile.terraform
entities/src/: lib.rs  main.rs  permission.rs  permission_action.rs  permission_resource.rs  permission_scope.rs  permissions.rs  posts.rs  prelude.rs  role_permissions.rs  roles.rs  sea_orm_active_enums.rs  user.rs  user_permission.rs  user_permissions.rs  user_role.rs  users.rs
hasher/: Cargo.toml  README.md
hasher/src/: main.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  main.rs  middleware.rs
src/auth/: mod.rs
src/routes/: auth.rs  me.rs  mod.rs  permissions.rs  roles.rs  users.rs
src/setup/: mod.rs
terraform/: .gitignore  Makefile  README.md  backend-dev.tf  init.sh  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
