[workspace]
members = [".", "entities", "migration"]

[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"



[dependencies]
poem = {version = "3", features = []}
poem-openapi = { version = "5", features = ["swagger-ui", "scalar", "chrono", "uuid"]}
chrono = {version = "0.4.41", features = ["serde"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid" ] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
anyhow = "1.0.98"
entities = { path = "entities" }
migration = { path = "migration" }
once_cell = "1.19.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
extruct = "0.2.1"
rand = "0.8"
redis = "0.32.5"



